set version to 0.8

--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 
 
-version = '0.8-SNAPSHOT'
+version = '0.8'
 def goTargetVersion = '16.1'
 def goApiVersion = goTargetVersion + '.0'
 
