--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 
 
-version = '0.8'
+version = '0.9-SNAPSHOT'
 def goTargetVersion = '16.1'
 def goApiVersion = goTargetVersion + '.0'
 
